<resources>
    <string name="app_name">双创中心服务机器人</string>
    <string name="toolbar_title">主标题</string>
    <string name="toolbar_subtitle">. . . . . .</string>
    <string name="menu_college">学院简介</string>
    <string name="menu_book">书籍借阅</string>
    <string name="menu_space">地图导航</string>
    <string name="menu_qa">聊天问答</string>
    <string name="setting_wifi">无线网络</string>
    <string name="setting_site">地点管理</string>
    <string name="setting_calibrate">起点校准</string>
    <string name="setting_support">技术支持</string>
    <string name="setting_sys_setting">基础设置</string>
    <string name="setting_password">密码修改</string>
    <string name="setting_tip_ftp">FTP服务未启动</string>
    <string name="site_calibrating">校准中</string>
    <string name="site_start_calibrate">开始\n校准</string>
    <string name="password_input_head">密码:</string>
    <string name="password_tip">密码为4~10位，在首页边界连续点击正确即可进入后台</string>
    <string name="home_tip_touch">也可以点击屏幕操作哦</string>
    <string name="home_text_speak">您可以通过语音进行操作</string>
    <string name="welcome_tip1">对我说:“小途小途”</string>
    <string name="welcome_tip2">想要唤醒我的话</string>
    <string name="face_recognition">人脸识别</string>
</resources>
